2007-04-09  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-04-09  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath.

2007-04-07 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* libchristine/Christine.py.in:
		- Finished the import and initialization of dbus
		- Fixed a bug in window.set_icon bug.
		Was setting a path instead a gtk.gdk.Pixbuf
	* gui/MenuTrayIcon.glade:
		- Fixed some callbacks name.
	* libchirstine/Makefile.am:
		- Added ChristineGConfi to the scripts_DATA variable
	* libchristine/About.py.in, 
	  libchristine/Preferences.py:
		- Fixed a bug in window.set_icon bug.
		Was setting a path instead a gtk.gdk.Pixbuf
	* libchrstine/Share.py.in:
		- Fixed a bug in Share.getImage method,
		was sending None all the time because checks for something
		like this 'PIXMAPS_PATH/file/.png' instead
		'PIXMAPS_PATH/file.png'
2007-04-06 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* libchristine/Christine.py.in:
		- Support for internet radio stations that use the 
		m3u file format.
		- Import and initialization of Dbus
2007-04-05 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* libchristine/Christine.py.in:
		- Support for somafm (and all .pls radio stations)
		- Fixed a bug where the openRemote method don't push
		the play button to play.
2007-04-04 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* libchristine/Makefile.am: 
		Added the -fPIC to the gcc command in order to compile in
		64 bits systems.
		Fixed a bug where libchristine/Validator.py wheren't 
		installed
	* libchristine/Christine.py.in:
		Fixed bug #1694684 where Core Window is resizable in small view mode

2007-03-29 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* libchristine/Chrinstine.py.in:
		Fixed a bug when trying to get the Small View mode.
		Ctrl+F wasn't focusing the Search box. Fixed.
		Fixed a try icon Bug, it wasn't showing up
	* cplugins/show_properties.py: