@@ -1,3 +1,6 @@
+2007-04-15 Marco Antonio Islas Cruz <markuz@islascruz.org>
+	* libchristine/Christine.py.in:
+		- dBus Disabled.
 2007-04-09  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Makefile.am (EXTRA_DIST): Add config.rpath.
